# RadishLex

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/rulesets/: README.md  master-protection.json
.github/workflows/: pr-check.yml  release-check.yml
crates/ime-cli/: Cargo.toml
crates/ime-cli/src/: cli.rs  demo_engine.rs  lib.rs  main.rs
crates/ime-cli/src/cli/: tests.rs
crates/ime-core/: Cargo.toml
crates/ime-core/src/: engine.rs  error.rs  key.rs  lib.rs  model.rs  session.rs
crates/ime-core/tests/: session_lifecycle.rs
crates/ime-crypto/: Cargo.toml
crates/ime-crypto/src/: device.rs  lib.rs  model.rs  recovery.rs  signing.rs
crates/ime-crypto/src/model/: tests.rs
crates/ime-crypto/src/signing/: android_keystore.rs  apple_keychain.rs  tests.rs
crates/ime-crypto/src/signing/android_keystore/: jni_bridge.rs
crates/ime-crypto/tests/: android_keystore_smoke.rs  apple_keychain_smoke.rs
crates/ime-engine-rime/: Cargo.toml  build.rs
crates/ime-engine-rime/src/: config.rs  convert.rs  error.rs  ffi.rs  keymap.rs  lib.rs  session.rs
crates/ime-ffi/: Cargo.toml
crates/ime-ffi/src/: abi.rs  buffer.rs  contract.rs  demo_engine.rs  dictionary.rs  engine.rs  error.rs  key.rs  learning_status.rs  lib.rs  session.rs  snapshot.rs  sync_status.rs
crates/ime-ffi/tests/: ffi_contract_and_dictionary.rs
crates/ime-ranker/: Cargo.toml
crates/ime-ranker/src/: lib.rs  model.rs  ranker.rs
crates/ime-sync/: Cargo.toml
crates/ime-sync/src/: assemble.rs  device.rs  http_transport.rs  lib.rs  merge.rs  model.rs  remote.rs  signing.rs
crates/ime-sync/tests/: go_server_http.rs
crates/ime-userdb/: Cargo.toml
crates/ime-userdb/src/: error.rs  lib.rs  model.rs  store.rs  sync_decode.rs
crates/ime-userdb/src/store/: sync_apply.rs  sync_payload.rs  tests.rs
crates/ime-userdb/tests/: p2_payload_crypto.rs  two_client_go_http_sync.rs  two_client_sync.rs
deploy/sync-server/: .env.example  .env.local.example  docker-compose.local.yaml  docker-compose.yaml  nginx.prod.conf
deploy/sync-server/caddy/: local.Caddyfile  production.Caddyfile
deploy/sync-server/env/: local.env  production.env
docs/: cli.md  crypto-boundary.md  engine-boundary.md  engine-rime-adapter.md  ffi-boundary.md  personalization-learning.md  privacy-sync.md  production-recovery-flow.md  repository-layout.md  roadmap.md  sync-key-management.md  sync-payload.md  sync-server-api-storage.md  sync-server-oidc-roadmap.md  technical-plan.md
docs/adr/: 0002-recovery-code-kdf.md  0003-device-signing-key-storage.md  0004-platform-private-key-storage-backend.md  0005-apple-platform-signing-strategy.md
docs/devlogs/: 2026-W26.md  2026-W27.md
docs/runbooks/: android-keystore-signing-backend.md  apple-keychain-signing-backend.md  ffi-platform-call-contract.md  rime-native-smoke.md  sync-server-compose.md  sync-server-local-smoke.md  sync-server-production-deployment.md
scripts/: check-android-target.py  check-android-target.sh  check-docs.ps1  check-docs.py  check-docs.sh  check-repo.ps1  check-repo.py  check-repo.sh  check-text-files.ps1  check-text-files.py  check-text-files.sh
server/sync-server/: .dockerignore  Dockerfile  go.mod
server/sync-server/cmd/radishlex-sync-server/: main.go
server/sync-server/internal/api/: errors.go  errors_test.go  handler.go  handler_test.go  requests.go  responses.go
server/sync-server/internal/config/: config.go  config_test.go
server/sync-server/internal/runtime/: backup_restore_smoke_test.go  external_tls_smoke_test.go  local_smoke_test.go  runtime.go  runtime_test.go  upgrade_rollback_smoke_test.go
server/sync-server/internal/storage/: errors.go  hash.go  local_blob_store.go  local_blob_store_test.go  memory.go  memory_test.go  model.go  schema_privacy_test.go  signature.go  sqlite_store.go  sqlite_store_test.go  store.go  store_conformance_test.go
server/sync-server/migrations/: 0001_init.sql  migrations.go
