[package]
name = "radishlex-ime-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file = "../../LICENSE"
description = "Client-side encryption boundary models for RadishLex."

[lib]
name = "radishlex_ime_crypto"
path = "src/lib.rs"
