[package]
name = "radishlex-ime-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file = "../../LICENSE"
description = "Client-side encryption boundary models for RadishLex."

[lib]
name = "radishlex_ime_crypto"
path = "src/lib.rs"

[dependencies]
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.13.0"
sha2 = "0.11.0"
