[package]
name = "radishlex-ime-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file = "../../LICENSE"
description = "Sync payload boundary models for RadishLex."

[lib]
name = "radishlex_ime_sync"
path = "src/lib.rs"

[dependencies]
base64ct = { version = "1.8.3", features = ["alloc"] }
radishlex-ime-crypto = { path = "../ime-crypto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
